# machinistic_desire

./: .gitignore  README.md  pyproject.toml
machinistic_desire/: __init__.py  __main__.py  config.py  openrouter_client.py  parser.py  prompts.py  reporting.py
tests/: test_parser.py
