[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "machinistic_desire"
version = "0.1.0"
description = "OpenRouter experiment for eliciting and scoring model desires."
requires-python = ">=3.10"

[tool.setuptools]
packages = ["machinistic_desire"]
